added structure according to requirements

--- a/Dokumentation/211028_SWE2_Ausarbeitung.tex
+++ b/Dokumentation/211028_SWE2_Ausarbeitung.tex
@@ -53,10 +53,22 @@
 \clearpage
 \input{211028_SWE2_Methodik.tex}						% Section
 
-
-
-
 \clearpage
+
+
+\input{211028_SWE2_DDD.tex}						% Section
+\input{211028_SWE2_Principles.tex}						% Section
+\input{211028_SWE2_Architektur.tex}						% Section
+\input{211028_SWE2_Muster.tex}						% Section
+\input{211028_SWE2_Tests.tex}						% Section
+\input{211028_SWE2_Refactor.tex}						% Section
+
+
+
+
+
+
+
 
 
 
