--- a/Dokumentation/211028_SWE2_Einleitung.tex
+++ b/Dokumentation/211028_SWE2_Einleitung.tex
@@ -13,18 +13,9 @@
 
 
 
-
-
-
-
-
-
-
-
-Dronen als zukünfiges Verfehkrsmittel für kurzstreckentransporte
-
-Dronen auf dem Mars (2018?)
-
+Diese Ausarbeitung wird als Prüfungsleistung für das Modul \textit{Software Engineering 2} angefertigt.
+Die Inhalte basieren maßgeblich auf der zugrundeliegenden Vorlesung.
+Die Prüfungsleistung wird auf entstandenem Code einer Studienarbeit ausgeführt.
 
 
 
