--- a/Dokumentation/211028_SWE2_Problemstellung.tex
+++ b/Dokumentation/211028_SWE2_Problemstellung.tex
@@ -1,7 +1,13 @@
 \newSec{Problemstellung}{1}
 
+Diese Ausarbeitung baut auf dem Code einer Studienarbeit auf.
 
+Die Problemstellung der zugrundeliegenden Studienarbeit lautet wie folgt:
+\glqq
 
+\missing[Text hier einfügen!]
+
+\grqq \cite{}
 
 
 
