--- a/Dokumentation/DefaultContent/200803_Default_Functions - Shortcuts2.tex
+++ b/Dokumentation/DefaultContent/200803_Default_Functions - Shortcuts2.tex
@@ -6,7 +6,7 @@
 \newcommand{\comSPar}[2][]{\textit{\textbf{#2}} \ifthenelse{\isempty{#1}}{\label{sec:#2}}{\label{sec:#1}}}
 
 \newcommand{\newSec}[3][]{%
-	\ifthenelse{\equal{#3}{1}}{\comSec[#1]{#2}}{}
+	\ifthenelse{\equal{#3}{1}}{\clearpage \comSec[#1]{#2}}{}
 	\ifthenelse{\equal{#3}{2}}{\comSSec[#1]{#2}}{}
 	\ifthenelse{\equal{#3}{3}}{\comSSSec[#1]{#2}}{}
 	\ifthenelse{\equal{#3}{4}}{\comPar[#1]{#2}}{}
