--- a/Dokumentation/211028_SWE2_Ausarbeitung.tex
+++ b/Dokumentation/211028_SWE2_Ausarbeitung.tex
@@ -55,12 +55,28 @@
 
 \clearpage
 
+\input{211028_SWE2_DDD.tex}							% Section
+\input{211028_SWE2_DDD - Language.tex}						% SubSection
+\input{211028_SWE2_DDD - Repositories.tex}					% SubSection
+\input{211028_SWE2_DDD - Aggregates.tex}					% SubSection
+\input{211028_SWE2_DDD - Entities.tex}						% SubSection
+\input{211028_SWE2_DDD - Objects.tex}						% SubSection
 
-\input{211028_SWE2_DDD.tex}						% Section
+
 \input{211028_SWE2_Principles.tex}						% Section
+\input{211028_SWE2_Principles - SOLID.tex}					% SubSection
+\input{211028_SWE2_Principles - GRASP.tex}					% SubSection
+\input{211028_SWE2_Principles - DRY.tex}						% SubSection
+\input{211028_SWE2_Principles - KISS.tex}						% SubSection
+\input{211028_SWE2_Principles - YAGNI.tex}					% SubSection
+\input{211028_SWE2_Principles - Conway.tex}					% SubSection
+
+
+
+
 \input{211028_SWE2_Architektur.tex}						% Section
 \input{211028_SWE2_Muster.tex}						% Section
-\input{211028_SWE2_Tests.tex}						% Section
+\input{211028_SWE2_Tests.tex}							% Section
 \input{211028_SWE2_Refactor.tex}						% Section
 
 
