--- a/Dokumentation/211028_SWE2_Problemstellung.tex
+++ b/Dokumentation/211028_SWE2_Problemstellung.tex
@@ -11,6 +11,8 @@ Die Problemstellung der zugrundeliegenden Studienarbeit lautet wie folgt:
 
 
 
+\missing[Darf das hier überhaupt so? Immerhin wird SWE vor der Studienarbeit abgegeben... Also brauchen wir eine Dependency Inversion für das Zitat :D]
+
 
 
 
