Added Comment to Tests.tex

--- a/Ausarbeitung/211028_SWE2_Tests.tex
+++ b/Ausarbeitung/211028_SWE2_Tests.tex
@@ -40,3 +40,9 @@ Daraus folgt, dass die Test-Umgebung nicht in den Produktiv-Code eingebunden wer
 
 
 \newSec[TestCover]{Code Coverage}{3}
+
+using \texttt{coverlet} with \texttt{Visual Studio}
+
+Install: needs Microsoft.NET.Sdk
+
+
