Added Information for Coverlet

--- a/Ausarbeitung/211028_SWE2_Tests.tex
+++ b/Ausarbeitung/211028_SWE2_Tests.tex
@@ -43,6 +43,16 @@ Daraus folgt, dass die Test-Umgebung nicht in den Produktiv-Code eingebunden wer
 
 using \texttt{coverlet} with \texttt{Visual Studio}
 
-Install: needs Microsoft.NET.Sdk
 
 
+\newSec[TestCoverStart]{Getting Started}{4}
+\begin{itemize}
+\item installiere Microsoft.NET.Sdk
+\item installiere Microsoft.NET.Test.Sdk (NuGet.org)
+
+
+
+\end{itemize}
+
+
+using \texttt{Google Test} with \texttt{Visual Studio}
