Added TDD and some Comments/Ideas for Content
Added Layout for coloring Text.

--- a/Ausarbeitung/211028_SWE2_Muster.tex
+++ b/Ausarbeitung/211028_SWE2_Muster.tex
@@ -4,3 +4,11 @@
 
 
 
+
+
+
+
+\newSec[MusterFassade]{Fassade}{3}
+
+Die Klasse \CodeClass{PoseController} kann als Fassade angesehen werden, da hier die Interaktion mit den darin verwalteten Klassen gekapselt wird.
+
