--- a/Ausarbeitung/211028_SWE2_Principles - DRY.tex
+++ b/Ausarbeitung/211028_SWE2_Principles - DRY.tex
@@ -6,3 +6,8 @@ Aus aufwändiger Domain-Architektur ergibt sich, dass das umgesetzt wurde => vie
 
 
 
+Sichtbar beonders in der Umsetzung von Full Virtual Klassen (Interfaces in Java) und darauf aufbauend Klassen, die diese Methoden implementieren.
+Beide werden in \glq höherwertigen\grqq Klassen eingesetzt. \zB\ Outputable und Output.
+
+
+
