--- a/Ausarbeitung/211028_SWE2_Principles - SOLID.tex
+++ b/Ausarbeitung/211028_SWE2_Principles - SOLID.tex
@@ -9,6 +9,7 @@
 
 \missing[Was genau soll hier beschrieben werden? nochmal Vorlesung anhören!]
 
+\missing[Hier evtl eine Tabelle mit allen Klassen (nach Layer und Alphabet geordnet?) und dem von uns definierten Zweck?]
 
 
 
@@ -37,6 +38,6 @@ Hier als Beispiel das Controller-Array in ControllerSystem
 
 \newSec[PrincSOLIDDep]{Dependency Inversion Principle}{3}
 
-
+\missing[Transmitable in PoseController]
 
 
