--- a/Ausarbeitung/211028_SWE2_Muster.tex
+++ b/Ausarbeitung/211028_SWE2_Muster.tex
@@ -12,3 +12,8 @@
 
 Die Klasse \CodeClass{PoseController} kann als Fassade angesehen werden, da hier die Interaktion mit den darin verwalteten Klassen gekapselt wird.
 
+
+
+\newSec[MusterObserver]{Beobachter}{3}
+
+\missing[hier einfach mal ROS blabla. evtl von der ROS Homepage übersetzen und so]
