--- a/Ausarbeitung/DefaultContent/200803_Default_Layout.tex
+++ b/Ausarbeitung/DefaultContent/200803_Default_Layout.tex
@@ -217,7 +217,7 @@ position=top]{caption} 				%Tabellenunterschriften, evtl. Formatieren
 \newcommand{\CodeStruct}[1]{\texttt{\textcolor{CPPStyleKey}{#1}}}
 \newcommand{\CodeVar}[1]{\texttt{\textcolor{CPPStyleKey}{#1}}}
 
-\newcommand{\Branch}[1]{\textcolor{BranchStyle}{Commit } \texttt{#1}}
+\newcommand{\Branch}[1]{\textcolor{BranchStyle}{Branch } \texttt{#1}}
 \newcommand{\Commit}[1]{\textcolor{CommitStyle}{Commit } \texttt{#1}}
 
 
