Add Comments to Documentation as preperation for Testing

--- a/Ausarbeitung/211028_SWE2_Architektur.tex
+++ b/Ausarbeitung/211028_SWE2_Architektur.tex
@@ -1,6 +1,10 @@
 \newSec[Arch]{Architektur}{1}
 
 
+Diagramm clean Architecture
 
 
 
+Diskutieren, ob DroneController\_pkg Adapter oder Application ist.
+Wenn Adapter, dann nach draußen.
+Wenn Application, dann ist Controller ein PlugIn.
