--- a/Ausarbeitung/211028_SWE2_DDD - Language.tex
+++ b/Ausarbeitung/211028_SWE2_DDD - Language.tex
@@ -2,3 +2,8 @@
 
 
 \missing[Sem5 VL7-1 Min64]
+
+Ist eine Definition aller genutzten Begriffe.
+
+Existiert nicht in diesem Projekt.
+Weil keine Zeit / keine Lust.
