--- a/Ausarbeitung/211028_SWE2_DDD - Objects.tex
+++ b/Ausarbeitung/211028_SWE2_DDD - Objects.tex
@@ -5,3 +5,14 @@
 \missing[Sem5 VL7-3 Min49]
 
 \missing[Sem5 VL8-1 Min36]
+
+
+
+Sind immer gleich bei gleichen Variablen-Werten.
+
+FixedPoint
+Unit
+Value
+TimeStamp
+Vector3D
+TimedValue
