--- a/Ausarbeitung/211028_SWE2_Muster.tex
+++ b/Ausarbeitung/211028_SWE2_Muster.tex
@@ -5,9 +5,6 @@
 
 
 
-
-
-
 \newSec[MusterFassade]{Fassade}{3}
 
 Die Klasse \CodeClass{PoseController} kann als Fassade angesehen werden, da hier die Interaktion mit den darin verwalteten Klassen gekapselt wird.
@@ -17,3 +14,8 @@ Die Klasse \CodeClass{PoseController} kann als Fassade angesehen werden, da hier
 \newSec[MusterObserver]{Beobachter}{3}
 
 \missing[hier einfach mal ROS blabla. evtl von der ROS Homepage übersetzen und so]
+
+
+\newSec[MusterBridge]{Brücke}{3}
+
+DroneController\_pkg zu parrot\_pkg
