--- a/Ausarbeitung/211028_SWE2_Principles - DRY.tex
+++ b/Ausarbeitung/211028_SWE2_Principles - DRY.tex
@@ -11,3 +11,5 @@ Beide werden in \glq höherwertigen\grqq Klassen eingesetzt. \zB\ Outputable und
 
 
 
+We DRY nicht anwendet, ist halt bescheudert - weil faule Menschen wollen doch nicht extra Mehrarbeit.
+\missing[evtl andere fragen, wie hier argumentiert wurde]
