--- a/Ausarbeitung/211028_SWE2_Principles - GRASP.tex
+++ b/Ausarbeitung/211028_SWE2_Principles - GRASP.tex
@@ -4,12 +4,19 @@
 \newSec[PrincGRASPKopp]{Kopplung}{3}
 
 
+PoseController ist ein Monolith.
+
+ROS ist strukturell sehr lose gekoppelt (verschiedene Prozesse, die mit Topics (Observer) miteinander komunizieren).
+
+Brücke ist eher lose gekoppelt.
+
 
 
 
 
 \newSec[PrincGRASPKopp]{Kohäsion}{3}
 
-
+mit niedriger Kohäsion wird das single responsibility principle.
+Wird angewandt. Beispiel: Controller-Aufbau in Domain.
 
 
