--- a/Ausarbeitung/211028_SWE2_Principles - YAGNI.tex
+++ b/Ausarbeitung/211028_SWE2_Principles - YAGNI.tex
@@ -15,3 +15,4 @@ Grundlegende Funktionalitäten werden hinzugefügt, WEIL sie benötigt werden, n
 Immerhin weiß man ja schon so grob, was alles im Projekt benötigt wird... Zugegeben, hier wird oft erst die leere Funktion eingebaut und der benötigte Code dann, wenn es an den jeweiligen Test/Ausprobieren geht.
 Beispiel: Vector3D::rotate() Body
 
+Basis von TDD => Schreibe nur, was du wirklich brauchst.
