--- a/Ausarbeitung/211028_SWE2_Tests.tex
+++ b/Ausarbeitung/211028_SWE2_Tests.tex
@@ -18,6 +18,10 @@ Allerdings wird in dieser Ausarbeitung nur auf Unit Tests eingegangen.
 
 
 
+
+
+
+
 \newSec[TestUnit]{Unit Tests}{2}
 
 
@@ -28,18 +32,30 @@ Daraus folgt, dass die Test-Umgebung nicht in den Produktiv-Code eingebunden wer
 \missing[Bandit bietet leider keine Code Coverage...]
 
 
-
-
-
 \newSec[TestUnitUsed]{Umgesetzte Unit Tests}{3}
 
+verweis auf eine tst.cpp Datei (oder mehrere?)
 
+
+\newSec[TestUnitMock]{Mocks}{4}
+
+Test callTransmitter Test\_Application/test.cpp
+
+
+
+\newSec[TestUnitATRIP]{ATRIP-Regeln}{3}
+
+wurde angewandt. Verweis auf einen beliebigen Test.
 
 
 
 
 
 \newSec[TestCover]{Code Coverage}{3}
+
+
+\missing[Reka fragen]
+
 
 using \texttt{coverlet} with \texttt{Visual Studio}
 
