--- a/Ausarbeitung/211028_SWE2_Ausarbeitung.tex
+++ b/Ausarbeitung/211028_SWE2_Ausarbeitung.tex
@@ -50,10 +50,19 @@
 
 
 
-\clearpage
-\input{211028_SWE2_Methodik.tex}						% Section
+%\clearpage
+%\input{211028_SWE2_Methodik.tex}						% Section
+
+
+
+
 
 \clearpage
+
+
+\input{211028_SWE2_Architektur.tex}						% Section
+\input{211028_SWE2_Muster.tex}						% Section
+
 
 \input{211028_SWE2_DDD.tex}							% Section
 \input{211028_SWE2_DDD - Language.tex}						% SubSection
@@ -74,8 +83,7 @@
 
 
 
-\input{211028_SWE2_Architektur.tex}						% Section
-\input{211028_SWE2_Muster.tex}						% Section
+
 \input{211028_SWE2_Tests.tex}							% Section
 \input{211028_SWE2_Refactor.tex}						% Section
 
