--- a/Ausarbeitung/211028_SWE2_Architektur.tex
+++ b/Ausarbeitung/211028_SWE2_Architektur.tex
@@ -8,3 +8,19 @@ Diagramm clean Architecture
 Diskutieren, ob DroneController\_pkg Adapter oder Application ist.
 Wenn Adapter, dann nach draußen.
 Wenn Application, dann ist Controller ein PlugIn.
+
+
+
+
+\newSec[ArchDepRule]{Dependency Rule}{2}
+
+
+
+
+
+
+\newSec[ArchPackages]{Pakete}{2}
+
+
+
+
