--- a/Ausarbeitung/211028_SWE2_DDD - Aggregates.tex
+++ b/Ausarbeitung/211028_SWE2_DDD - Aggregates.tex
@@ -4,3 +4,9 @@
 
 \missing[Sem5 VL9-1 Min6]
 
+
+\missing\
+VL DDD S74:
+Jede Entity gehört zu einem Aggregat – selbst wenn das Aggregat nur aus dieser Entity besteht
+
+Wenn keine Entities, dann auch keine Aggregate.
