--- a/Ausarbeitung/211028_SWE2_DDD - Language.tex
+++ b/Ausarbeitung/211028_SWE2_DDD - Language.tex
@@ -1,9 +1,6 @@
 \newSec[DDDLang]{Ubiquitous Language}{2}
 
+Die Ubiquitous Language ist eine einheitliche Sprache, auf die sich Entwickler und Domänenexperten einigen und gemeinsam verwenden. In diesem Projekt ist aus Zeitgründen keine solche einheitliche Sprache definiert worden, da die Rollen \textit{Domänen-Expert*in} und \textit{Entwickler*in} von der gleichen Person eingenommen wurden. Verständnisprobleme sind hierbei nicht zu erwarten.\footnote{Aber nie ganz auszuschließen.}
 
-\missing[Sem5 VL7-1 Min64]
 
-Ist eine Definition aller genutzten Begriffe.
-
-Existiert nicht in diesem Projekt.
-Weil keine Zeit / keine Lust.
+\missing[Weil es kein Domänen-Modell gibt, kann es auch keine U-Language geben :P]
