--- a/Ausarbeitung/211028_SWE2_DDD - Repositories.tex
+++ b/Ausarbeitung/211028_SWE2_DDD - Repositories.tex
@@ -1,3 +1,6 @@
 \newSec[DDDRepo]{Repositories}{2}
 
 \missing[Sem5 VL9-1 Min12]
+
+\missing[Keine Interaktion mit persistentem Speicher => Keine Repos im Code.]
+
