--- a/Ausarbeitung/211028_SWE2_DDD - Visibility.tex
+++ b/Ausarbeitung/211028_SWE2_DDD - Visibility.tex
@@ -6,3 +6,7 @@
 Muss das hier mit rein? eher optional, weil das nur Lindners Prinzip ;)
 
 
+\missing[listing von SafetyProvider.h und SafetyProvider.cpp, hierin beschrieben, welche Variablen bzw Methoden wie sichtbar sind und wie man das in cpp erkennen kann. (Stufen 0 - 2)]
+\missing [Sprachfeature von cpp: alles, was in einer Klasse Public ist, ist auch untmittelbar in Stufe 3-5]
+
+
