--- a/Ausarbeitung/211028_SWE2_Functions - Shortcuts.tex
+++ b/Ausarbeitung/211028_SWE2_Functions - Shortcuts.tex
@@ -40,3 +40,10 @@
 \newcommand{\Heap}{\textit{dynamic storage duration}-Bereich}
 \newcommand{\Static}{\textit{static storage duration}-Bereich}
 \newcommand{\STL}{\textit{Standard Template Library}}
+
+
+\newcommand{\DDDl}{Domain Driven Design}
+\newcommand{\DDD}{\textit{DDD}}
+
+
+
