--- a/Ausarbeitung/211028_SWE2_Principles - DRY.tex
+++ b/Ausarbeitung/211028_SWE2_Principles - DRY.tex
@@ -13,3 +13,11 @@ Beide werden in \glq höherwertigen\grqq Klassen eingesetzt. \zB\ Outputable und
 
 We DRY nicht anwendet, ist halt bescheudert - weil faule Menschen wollen doch nicht extra Mehrarbeit.
 \missing[evtl andere fragen, wie hier argumentiert wurde]
+
+
+
+
+\missing[Umsetzung mit Duplication Checker Tool]
+
+
+https://cppdepend.com/blog/?p=556
