--- a/Ausarbeitung/211028_SWE2_Ausarbeitung.tex
+++ b/Ausarbeitung/211028_SWE2_Ausarbeitung.tex
@@ -65,7 +65,9 @@
 
 
 \input{211028_SWE2_DDD.tex}							% Section
+\input{211028_SWE2_DDD - Modell.tex}						% SubSection
 \input{211028_SWE2_DDD - Language.tex}						% SubSection
+\input{211028_SWE2_DDD - Visibility.tex}						% SubSection
 \input{211028_SWE2_DDD - Repositories.tex}					% SubSection
 \input{211028_SWE2_DDD - Aggregates.tex}					% SubSection
 \input{211028_SWE2_DDD - Entities.tex}						% SubSection
@@ -82,7 +84,7 @@
 
 
 
-
+\addtocontents{toc}{\protect\clearpage}			% Seitenumbruch im Inhaltsverzeichnis
 
 \input{211028_SWE2_Tests.tex}							% Section
 \input{211028_SWE2_Refactor.tex}						% Section
