--- a/Ausarbeitung/211028_SWE2_DDD.tex
+++ b/Ausarbeitung/211028_SWE2_DDD.tex
@@ -1,4 +1,21 @@
 \newSec[DDD]{Domain Driven Design}{1}
 
 
+Unter \textit{\DDDl} (\DDD) versteht sich eine Vorgehensweise für Software-Modellierung.
+
+Um Software zu modellieren, welche nach \DDD\ entworfen werden soll, wird ein Domänenmodell von der Rolle \textit{Domänen-Expert*in} erstellt. Personen, die diese Rolle bekleiden benötigen keine Programmierkenntnisse.
+Die Implementierung einer Software bildet die grundlegenden Zusammenhänge des Domänenmodells ab.
+
+Die nachfolgenden Unterkapiteln wird die Anwednung dieser Vorgehensweise auf dem zugrundeliegenden Code analysiert.
+
+
+
+
 \missing[Sem5 VL7]
+
+
+
+
+
+
+\missing[word-cloud basteln?]
