added Content for Chapter DDD

--- a/Ausarbeitung/211028_SWE2_DDD - Entities.tex
+++ b/Ausarbeitung/211028_SWE2_DDD - Entities.tex
@@ -8,13 +8,22 @@
 
 
 
+
+
+
+
+Identitäten sind im Code nicht als solches Abgebildet (es existieren keine Schlüssel).
+
+
+
+
+
+
+
 \newSec[DDDEntitiesSurro]{Surrogatschlüssel}{3}
 \missing[Sem5 VL8-2 Min7]
 
 
-Mögliches Beispiel: Sequenz in ROS-Messages. 
-
-Weiterhin wird der Zeitstempel mitgeführt. Allferdings nicht mit dem Zweck als Schlüssel.
 
 
 
