--- a/Ausarbeitung/211028_SWE2_DDD - Objects.tex
+++ b/Ausarbeitung/211028_SWE2_DDD - Objects.tex
@@ -1,12 +1,11 @@
 \newSec[DDDVO]{Value Objects}{2}
 
-\missing[Sem5 VL7-3 Min35]
-
-\missing[Sem5 VL7-3 Min49]
-
-\missing[Sem5 VL8-1 Min36]
+Ein beliebiges Objekt ohne eigene Identität werden auch als \textit{Value Object} (\textit{VO}) bezeichnet.
+Die Kategorisierung als solches ergibt sich durch die \textit{immutable}-Eigenschaft. Heraus leitet sich eine Gleichheit der Objekte bei gleichen Attribut-Werten ab.
 
 
+
+\missing\
 
 Sind immer gleich bei gleichen Variablen-Werten.
 
@@ -16,3 +15,7 @@ Value
 TimeStamp
 Vector3D
 TimedValue
+Alle ROS\_messages
+
+
+\missing[Bei Beispielen: Header-Datei zeigen, weil dort nicht set-Methode vorkommt.]
