edited Chapter Design Pattern

--- a/Ausarbeitung/211028_SWE2_Ausarbeitung.tex
+++ b/Ausarbeitung/211028_SWE2_Ausarbeitung.tex
@@ -13,6 +13,7 @@
 \begin{document}
 \input{DefaultContent/200803_Default_Functions - Shortcuts2.tex}
 \input{211028_SWE2_Functions - Shortcuts2.tex}
+\input{211028_SWE2_Functions - ros.tex}
 \PagestyleStdPre
 
 % Default Content
@@ -62,6 +63,10 @@
 
 \input{211028_SWE2_Architektur.tex}						% Section
 \input{211028_SWE2_Muster.tex}						% Section
+\input{211028_SWE2_Muster - Observer.tex}					% SubSection
+\input{211028_SWE2_Muster - Bridge.tex}						% SubSection
+\input{211028_SWE2_Muster - Fassade.tex}						% SubSection
+
 
 
 \input{211028_SWE2_DDD.tex}							% Section
