--- a/Ausarbeitung/211028_SWE2_Literaturverzeichnis.tex
+++ b/Ausarbeitung/211028_SWE2_Literaturverzeichnis.tex
@@ -55,6 +55,18 @@
 
 
 
+
+%ROS
+
+
+
+\NewBibItem{ROSObserer1}{Understanding ROS Topics}
+\Online{http://wiki.ros.org/ROS/Tutorials/UnderstandingTopics}
+\Published{\NA}, \Modified{18.07.2019}, \Requested{27.03.2022}
+
+
+
+
 %Language
 \NewBibItem{cpp1}{Saks D., Better even at the lowest levels}
 \Online{https://www.embedded.com/better-even-at-the-lowest-levels/}
