--- a/Ausarbeitung/211028_SWE2_Muster.tex
+++ b/Ausarbeitung/211028_SWE2_Muster.tex
@@ -1,30 +1,7 @@
 \newSec[Muster]{Entwurfsmuster}{1}
 
 
+\missing[Blabla für Einleitung des Kapitels]
 
 
-
-
-
-
-
-\newSec[MusterObserver]{Beobachter}{3}
-
-\missing[hier einfach mal ROS blabla. evtl von der ROS Homepage übersetzen und so]
-
-
-\newSec[MusterBridge]{Brücke}{3}
-
-DroneController\_pkg zu parrot\_pkg
-
-
-
-
-
-
-
-\newSec[MusterFassade]{Fassade}{3}
-
-Die Klasse \CodeClass{PoseController} kann als Fassade angesehen werden, da hier die Interaktion mit den darin verwalteten Klassen gekapselt wird.
-
-\missing[fällt evtl raus??]
+Bei der Beschreibung der einzelnen Entwurfsmuster orientiert sich diese Arbeit an der Beschreibungsstruktur der GoF (Gang of Four).
