--- a/Ausarbeitung/211028_SWE2_Ausarbeitung.tex
+++ b/Ausarbeitung/211028_SWE2_Ausarbeitung.tex
@@ -63,9 +63,11 @@
 
 \input{211028_SWE2_Architektur.tex}						% Section
 \input{211028_SWE2_Muster.tex}						% Section
-\input{211028_SWE2_Muster - Observer.tex}					% SubSection
-\input{211028_SWE2_Muster - Bridge.tex}						% SubSection
 \input{211028_SWE2_Muster - Fassade.tex}						% SubSection
+\input{211028_SWE2_Muster - Bridge.tex}						% SubSection
+\input{211028_SWE2_Muster - Observer.tex}					% SubSection
+\input{211028_SWE2_Muster - Eventbus.tex}					% SubSection
+
 
 
 
