--- a/Ausarbeitung/211028_SWE2_DDD.tex
+++ b/Ausarbeitung/211028_SWE2_DDD.tex
@@ -19,3 +19,7 @@ Die nachfolgenden Unterkapiteln wird die Anwednung dieser Vorgehensweise auf dem
 
 
 \missing[word-cloud basteln?]
+
+
+
+\missing[DOmain Services??]
