--- a/Ausarbeitung/211028_SWE2_Fazit.tex
+++ b/Ausarbeitung/211028_SWE2_Fazit.tex
@@ -1,4 +1,7 @@
 \newSec[Fazit]{Fazit und Ausblick}{1}
 
 
+War alles kacke, viel zu spät angefangen, das aufzuschreiben. Ging aber irgendwie auch nicht früher, weil der Code länger gebraucht hat.
+
+FUUUUUUUUUUUUUUUUU 
 
