--- a/Ausarbeitung/211028_SWE2_Functions - Shortcuts.tex
+++ b/Ausarbeitung/211028_SWE2_Functions - Shortcuts.tex
@@ -46,4 +46,6 @@
 \newcommand{\DDD}{\textit{DDD}}
 
 
-
+\newcommand{\clean}{\textit{Clean Archirecture}}
+\newcommand{\VO}{\textit{Value-Object}}
+\newcommand{\DepInv}{\textit{Dependency Inversion}}
