--- a/Ausarbeitung/211028_SWE2_Literaturverzeichnis.tex
+++ b/Ausarbeitung/211028_SWE2_Literaturverzeichnis.tex
@@ -57,7 +57,9 @@
 
 
 %ROS
-
+\NewBibItem{ROS}{ROS - Robot Operating System}
+\Online{http://ros.org}
+\Published{\NA}, \Requested{10.04.2022}
 
 
 \NewBibItem{ROSObserer1}{Understanding ROS Topics}
