--- a/Ausarbeitung/211028_SWE2_Principles - DRY.tex
+++ b/Ausarbeitung/211028_SWE2_Principles - DRY.tex
@@ -17,7 +17,15 @@ We DRY nicht anwendet, ist halt bescheudert - weil faule Menschen wollen doch ni
 
 
 
+
+
 \missing[Umsetzung mit Duplication Checker Tool]
 
 
 https://cppdepend.com/blog/?p=556
+
+
+
+Duplication
+\Commit{edd7726743b9eb67e159112919224d54c54be670}
+für die \CodeClass{FixedPoint<T>}
