--- a/Ausarbeitung/DefaultContent/200803_Default_Functions - Shortcuts.tex
+++ b/Ausarbeitung/DefaultContent/200803_Default_Functions - Shortcuts.tex
@@ -9,6 +9,7 @@
 \newcommand{\ua}{unter anderem}
 \newcommand{\uU}{unter Umständen}
 \newcommand{\evtl}{eventuell}
+\newcommand{\tw}{teilweise}
 
 \newcommand{\Anmerkung}[1]{\begin{footnotesize}\textit{Anmerkung:} #1\end{footnotesize}}
 \newcommand{\note}[1]{\Anmerkung{#1}}
