--- a/Ausarbeitung/DefaultContent/200803_Default_Layout.tex
+++ b/Ausarbeitung/DefaultContent/200803_Default_Layout.tex
@@ -211,11 +211,11 @@ position=top]{caption} 				%Tabellenunterschriften, evtl. Formatieren
 }
 
 
-\newcommand{\CodePkg}[1]{\texttt{\textit{\textcolor{RedViolet}{#1}}}}
-\newcommand{\CodeClass}[1]{\texttt{\textcolor{CPPStyleKey}{#1}}}
-\newcommand{\CodeMeth}[1]{\texttt{\textcolor{CPPStyleKey}{#1}}}
+\newcommand{\CodePkg}[1]{Paket \texttt{\textit{\textcolor{Raspberry}{#1}}}}
+\newcommand{\CodeClass}[1]{Klasse \texttt{\textcolor{CPPStyleKey}{#1}}}
+\newcommand{\CodeMeth}[1]{Methode \texttt{\textcolor{CPPStyleKey}{#1}}}
 \newcommand{\CodeStruct}[1]{\texttt{\textcolor{CPPStyleKey}{#1}}}
-\newcommand{\CodeVar}[1]{\texttt{\textcolor{CPPStyleKey}{#1}}}
+\newcommand{\CodeVar}[1]{Variable \texttt{\textcolor{CPPStyleKey}{#1}}}
 
 \newcommand{\Branch}[1]{\textcolor{BranchStyle}{Branch } \texttt{#1}}
 \newcommand{\Commit}[1]{\textcolor{CommitStyle}{Commit } \texttt{#1}}
