--- a/Ausarbeitung/211028_SWE2_Info - Autor.tex
+++ b/Ausarbeitung/211028_SWE2_Info - Autor.tex
@@ -40,3 +40,8 @@
 \underline{\hspace{5cm}} \> \underline{\hspace{5cm}}\\
 \AutorStadt, \AusarbeitungAbgabeDatum \> Unterschrift
 \end{tabbing}}
+
+
+
+
+\newcommand{\Arbeit}{Programmentwurf}
