--- a/Ausarbeitung/211028_SWE2_Refactor.tex
+++ b/Ausarbeitung/211028_SWE2_Refactor.tex
@@ -4,3 +4,125 @@
 
 
 
+
+\newSec[RefaSmell]{Code Smells}{2}
+
+
+\newSec[RefaSmellDup]{Duplicated Code}{3}
+Wie bereits in \refCap{PrincDRY} beschrieben, finden sich Code-Duplikate im Code.
+Der hier zu erwähnende Code befindet sich in folgender Klasse:
+\CodeClass{FixedPoint<T>} (\Commit{edd7726743b9eb67e159112919224d54c54be670})
+
++ Funktionen (arythmetische Operatoren)
+
+
+
+\newSec[RefaSmellLong]{Long Method}{3}
+
+\CodeClass{PoseBuilder}, \CodeMeth{updatePose}
+\Commit{73f3400f4866b27200a37be5d3a80fa8394b2c48}
+
+Wie innerhalb der Methode ersichtlich ist wird ein manipulierender Code durch einen Block eingefasst. Dieser Block kann in eine eigene Methode verschoben werden und somit in der betrachteten Methode zu einer Funtionalität umgeändert werden.
+
+
+
+
+\newSec[RefaSmellLarge]{Large Class}{3}
+
+\Commit{73f3400f4866b27200a37be5d3a80fa8394b2c48}
+\CodeClass{FixedPoint<T>}
+
+Sehr viele Methoden / Funktionen, um die Funktionalität gewährleisten zu können. Ist eine Klasse, die Arithmetik implementiert. \missing[bitte in schönem Deutsch]
+
+
+
+\newSec[RefaSmellSwitch]{Switch Statement}{3}
+
+
+\missing[Theresa denkt sich einen wundervollen Namen für \textit{PosBridge} aus und dann den Commit mit diesem Namen hier angeben.]
+
+\CodeMeth{callbackKeys}
+
+Grundsätzlich sollen \textit{Switch Statements} vermieden werden.
+In diesem Fall wird davon ausgegangen, dass keine weitere Funktionalität zur Drohne hinzugefügt wird.
+
+
+\newSec[RefaSmellComments]{Code Comments}{3}
+
+An deiser Stelle sollen lediglich Links aufgezählt werden.
+
+\begin{itemize}
+\item https://github.com/MobMonRob/ROSLabDrohne/blob/d39df8957ec8659b8a6683d8d8ba853db01a82ff/Code/Domain/src/TimedValue.cpp\#L17
+\item https://github.com/MobMonRob/ROSLabDrohne/blob/d39df8957ec8659b8a6683d8d8ba853db01a82ff/Code/Domain/src/TimedValue.cpp\#L39
+
+
+
+
+\item https://github.com/MobMonRob/ROSLabDrohne/blob/d39df8957ec8659b8a6683d8d8ba853db01a82ff/Code/PosControl/src/PoseBuilder.cpp\#L103
+
+\end{itemize}
+
+
+
+Informative Comments und damit sinnvoll:
+\begin{itemize}
+\item https://github.com/MobMonRob/ROSLabDrohne/blob/d39df8957ec8659b8a6683d8d8ba853db01a82ff/Code/Domain/src/Vector3D.cpp\#L99
+\item https://github.com/MobMonRob/ROSLabDrohne/blob/d39df8957ec8659b8a6683d8d8ba853db01a82ff/Code/DroneController/src/Rotor.cpp\#L26
+
+
+
+
+\end{itemize}
+
+
+
+
+
+
+\newSec[RefaRefa]{Refactoring}{2}
+
+\newSec[RefaRefaExtract]{Method Extraction}{3}
+Angewandt auf die in \refCap{RefaSmellLong} beschriebene Methode.
+\Commit{9dd6821a9c63bf1682806b8ab319d6004247d3ca}
+
+
+
+\newSec[RefaRefaDeleg]{Interface Extraction}{3}
+
+Da sich die Hardware (Drohnen-PlugIn) im Projektverlauf geändert hat, wurde diese Chance genutzt, eine Bridge einzuführen. Dies hatte den Hintergrund, einen Umstieg auf andere Hardware zukünfitig zu erleichtern.
+Hierzu sind diverse, \tw\ virtuelle\footnote{\textit{virtuelle} Klassen in der Sprache c++ entsprechen \textit{abstrakten} Klassen in Java.}, Klassen entstanden.
+
+\Commit{2b1bccb0f9b2671ace7fb91b6ed86e2be2284596}
+
+
+
+\missing[Outputable und Inputable suchen... Da wurde das nochmal angewandt.]
+
+
+
+
+
+\newSec[RefaRefaRename]{Rename Class}{3}
+
+In der Vorlesung wird das Umbenennen einer Methode angesprochen. Ziel ist hier, die Verständlichkeit des Codes zu erhöhen.
+In dem dieser \Arbeit\ zugrundeliegenden Code wurden Klassen gefunden, bei welchen die Bezeichnung nicht selbstsprechend erscheint. Um dieser Problematik entgegenzuwirken, soll eine dieser betreffenden Klassen umbenannt werden. Hierbei handelt es sich um die Klasse \CodeClass{PosBridge}.
+\Commit{}
+
+\missing[muss noch gemacht werden :D]
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
