edited Chapter DDD

--- a/Ausarbeitung/211028_SWE2_Ausarbeitung.tex
+++ b/Ausarbeitung/211028_SWE2_Ausarbeitung.tex
@@ -75,6 +75,8 @@
 \input{211028_SWE2_DDD - Modell.tex}						% SubSection
 \input{211028_SWE2_DDD - Language.tex}						% SubSection
 \input{211028_SWE2_DDD - Visibility.tex}						% SubSection
+\input{211028_SWE2_DDD - Domain Services.tex}				% SubSection
+\input{211028_SWE2_DDD - DS Interfaces.tex}					% SubSection
 \input{211028_SWE2_DDD - Repositories.tex}					% SubSection
 \input{211028_SWE2_DDD - Aggregates.tex}					% SubSection
 \input{211028_SWE2_DDD - Entities.tex}						% SubSection
