--- a/Ausarbeitung/211028_SWE2_Principles - YAGNI.tex
+++ b/Ausarbeitung/211028_SWE2_Principles - YAGNI.tex
@@ -3,16 +3,16 @@
 \missing[Sem5 VL6-2 Min36]
 
 
+\textit{YAGNI} (\textit{You ain't gonna need it}) ist ein Prizip, nach dem Code nur erzeugt wird, wenn dieser unmittelbar benötigt wird. Auch absehbar benötigte Funktionalität ist zurückzustellen.
 
-You ain't gonna need it
+In diesem Projekt wurde dieses Prinzip aus der Präferenz des Entwicklers heraus nicht angewandt: Grundlegende Funktionalitäten werden hinzugefügt, \textit{WEIL} sie benötigt werden, nicht \textit{WENN} sie benötigt werden.
 
-Erst Code hinzufügen, wenn benötigt.
 
-Wurde im Projekt teilweise durchgeführt - git-Historie durchschauen... Fuck ist das aufwändig... -.-
+\missing\
+Gedanklich hinundher springen??
+Widerspricht guter Planung (Danke Theresa :) )
 
-Mein allgemeiner Programmier-Stil entspricht nicht vollständig diesem Prinzip.
-Grundlegende Funktionalitäten werden hinzugefügt, WEIL sie benötigt werden, nicht WENN es soweit ist :D
-Immerhin weiß man ja schon so grob, was alles im Projekt benötigt wird... Zugegeben, hier wird oft erst die leere Funktion eingebaut und der benötigte Code dann, wenn es an den jeweiligen Test/Ausprobieren geht.
-Beispiel: Vector3D::rotate() Body
 
-Basis von TDD => Schreibe nur, was du wirklich brauchst.
+Abweichend hiervon wurde dieses Prinzip im Zusammenhang mit der Anwendung von TDD umgesetzt (siehe \refCap{TDD}).
+
+
