--- a/Ausarbeitung/211028_SWE2_DDD - Language.tex
+++ b/Ausarbeitung/211028_SWE2_DDD - Language.tex
@@ -3,4 +3,22 @@
 Die Ubiquitous Language ist eine einheitliche Sprache, auf die sich Entwickler und Domänenexperten einigen und gemeinsam verwenden. In diesem Projekt ist aus Zeitgründen keine solche einheitliche Sprache definiert worden, da die Rollen \textit{Domänen-Expert*in} und \textit{Entwickler*in} von der gleichen Person eingenommen wurden. Verständnisprobleme sind hierbei nicht zu erwarten.\footnote{Aber nie ganz auszuschließen.}
 
 
-\missing[Weil es kein Domänen-Modell gibt, kann es auch keine U-Language geben :P]
+Für außenstehende hier eine kleine Übersicht: \missing[einmal in schöner schreiben. danke]
+\begin{table}[!ht]
+\begin{tabular}{ll}
+Domänenmodell & Klassenbezeichnung \\ \hline
+Drohne        & parrotControl      \\
+Data Output   & parrotIMU          \\
+Control Input & parrotTransmitter  \\
+Controller    & PoseController     \\
+Position      & Vector3D           \\
+Orientation   & Vector3D           \\
+User Input    & MainClass         
+\end{tabular}
+\end{table}
+
+
+
+
+
+
