--- a/Ausarbeitung/211028_SWE2_Principles - Conway.tex
+++ b/Ausarbeitung/211028_SWE2_Principles - Conway.tex
@@ -1,4 +1,4 @@
 \newSec[PrincCon]{Conway's Lay}{2}
 
-\missing[Sem5 VL6-2 Min65]
-
+Die Entwicklung der betrachteten Software basiert auf einer Person, daher kann davon ausgegangen werden, dass kein Kommunikationsproblem vorliegt.
+Kommunikation mit Personen, die nicht Teil des Entwicklungsteams sind (Auftraggeber \bzw\ Betreuer der Studienarbeit), wird hierbei nicht betrachtet.
